--- a/rues.html
+++ b/rues.html
@@ -8,8 +8,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>les balades</h1>
-    <ul>
+    <nav>
+        <ul>
+            <li class="navy"><a  href="/index.html"><img class="navvy" src="/ressources/pigeon.gif" alt="" srcset=""></a></li>
+            <li class="navy"><a   href="/eaux.html"><img class="navvy" src="/ressources/dolphin.gif" alt="" srcset=""></a></li>
+            <li class="navy"><a   href="/rues.html"><img class="navvy" src="/ressources/car.gif" alt="" srcset=""></a></li>
+        </ul>
+    </nav>
+    <h1 class="biggie">les balades</h1>    <ul>
         <li><a href="/index.html">les arbres</a></li>
         <li><a href="/eaux.html">les eaux</a></li>
         <li><a href="/rues.html">les rues</a></li>
@@ -18,25 +24,26 @@
     <h1>les rues</h1>
     <p>choses que j'aime faire avec les rues</p>
     <ol>
-        <li>me perdre dedans</li>
-        <li>en faire partie</li>
-        <li>en sentir le pouls </li>
-        <li>devenir une maison</li>
-        <li>entendre le monde se créer entre mes respirations</li>
+<li><a href="#section1">me perdre dedans</a></li>
+<li><a href="#section2">en faire partie</a></li>
+<li><a href="#section3">en sentir le pouls</a></li>
+<li><a href="#section4">devenir une maison</a></li>
+<li><a href="#section5">entendre le monde se créer entre mes respirations</a></li>
+
     </ol>
-    <h2>me perdre dedans</h2>
+    <h2 id="section1">me perdre dedans</h2>
     <img src="/ressources/rues (0).JPEG" alt="">
     <p>c'est vrai. J'ai aucun sens de l'orientation. un an et demi plus tard je me perds dans ma rue. Je fais le même chemin tous les jours mais ça ne change rien. je suis tout le temps toujours perdu. dans l'espace, dans le temps. j'aimerai bien dire que c'est que je m'étends à travers et au delà. Mais je pense juste que je suis pommé. Normalement ça me gêne pas. J'aime bien être surpris. Mais ça pose problème quand je suis supposé juste être et que je suis à côté. Je suis toujours à côté. De travers. Ca crée des aventures en tout cas.</p>
-    <h2>en faire partie</h2>
+    <h2 id="section2">en faire partie</h2>
     <img src="/ressources/rues (1).JPG" alt="">
     <p>Souvent je sens que je ne suis pas. Le monde et moi, il n'y a pas de limite entre les deux. Souvent c'est frustrant, presque d'être envahi. Avant c'était excitant. Je vis le monde en moi, j'en fais partie par ce qu'il m'habite. C'est pour ça que je suis revenu à Bruxelles. Je suis Bruxelles et elle moi. C'est mon chez moi. </p>
-    <h2>en sentir le pouls </h2>
+    <h2 id="section3">en sentir le pouls </h2>
     <img src="/ressources/rues (2).JPG" alt="">
     <p>quand je suis dans le tram, mon coeur bat au rythme de la personne à côté. Je ne sais pas expliquer comment. On respire ensemble, et le même air traverse nos poumons. J'inspire son expiration et lui la mienne. Je préfère être en rue quand on n'est plus en heure de pointe. L'odeur de la sueur des gens n'est pas aussi piquante de stress.  Dernièrement, je sens que la ville bat avec le pouls saccadé d'une personne anxieuse au bord d'une attaque de panique. Mais hier, hier était un jour ensoleillé, un jour férié. Il faisait beau vivre. Je le sentais, c'était exhilarant. </p>
-    <h2>devenir une maison</h2>
+    <h2 id="section4">devenir une maison</h2>
     <img src="/ressources/rues (3).JPG" alt="">
     <p>J'ai beaucoup bougé, fait des allers et parfois des retours. un jour, j'ai crée mon premier chez moi. On était en 2018. C'était un appartement silencieux, plein sud ou il faisait bon y vivre. C'était clairement pas mon premier appart, j'ai déménagé de ma famille en 2013. mais celui-ci, il avait  quelque chose de spécial. Avant lui, j'étais mon propre chez-moi. Une plante en pot ou peut-être même une graine de pissenlit qui est emportée par le vent. avant je faisais ça durant mes balades, je sentais ou le vent allait et je suivais, toujours le vent dans le dos. Maintenant mon corps ne tient plus. je ne tiens pas, trop de failles. chaque pas devient calculé, le chemin optimisé et décidé dans un rapport rendement/utilité/douleur. Je déteste ça. je veux être libre comme avant. Me sentir comme ma propre maison. Du coup maintenant, je crée des espaces. Ils me tiennent quand je ne tiens plus.</p>
-    <h2>entendre le monde se créer entre mes respirations</h2>
+    <h2 id="section5">entendre le monde se créer entre mes respirations</h2>
     <img src="/ressources/rues (4).JPG" alt="">
     <p>c'est étrange comment tout se crée toujours. ça n'a pas vraiment de début ni de fin. C'est, et ça évolue, c'est tout. C'est comme le fleuve d'Héraclite. Tu ne peux pas saisir ce qu'il est, et il ne sera jamais le même. Parfois tu remarques le changement. Parfois la constance. J'ai souvent ça à Bruxelles. Quelques jours je vois ce qui est resté le même. Imbibé de souvenirs je revis , encore. Parfois ce qui est resté le même me rappelle que je ne suis plus ce que j'étais. Et parfois je vois tout ce qui a changé. Parfois tout en même temps. C'est pour ça que j'aime mes amis. J'aime nos espace-temps relationnels. On est le même et on est différents. On se longe. On se co-crée. et on vit tous nos temps en une fois, ensemble.</p>
 </body>
