--- a/index.html
+++ b/index.html
@@ -8,37 +8,43 @@
     <title>Document</title>
 </head>
 <body>
-
-    <h1>les balades</h1>
+    <nav>
+        <ul>
+            <li class="navy"><a  href="/index.html"><img class="navvy" src="/ressources/pigeon.gif" alt="" srcset=""></a></li>
+            <li class="navy"><a   href="/eaux.html"><img class="navvy" src="/ressources/dolphin.gif" alt="" srcset=""></a></li>
+            <li class="navy"><a   href="/rues.html"><img class="navvy" src="/ressources/car.gif" alt="" srcset=""></a></li>
+        </ul>
+    </nav>
+    <h1 class="biggie">les balades</h1>
     <ul>
-        <li><a href="/index.html">les arbres</a></li>
+        <li ><a href="/index.html">les arbres</a></li>
         <li><a href="/eaux.html">les eaux</a></li>
         <li><a href="/rues.html">les rues</a></li>
     </ul>
     <h1>les arbres</h1>
     <p>choses que j'aime faire avec les arbres</p>
     <ol>
-        <li>toucher leurs écorces</li>
-        <li>me faire bercer par le bruit du vent qui traverse les branches</li>
-        <li>regarder le soleil danser à travers les feuilles</li>
-        <li>quand elles soutiennent mon poids</li>
-        <li>suivre leurs racines à travers le sol et ne plus en sortir</li>
+    <li><a href="#section1">toucher leurs écorces</a></li>
+    <li><a href="#section2">me faire bercer par le bruit du vent qui traverse les branches</a></li>
+    <li><a href="#section3">regarder le soleil danser à travers les feuilles</a></li>
+    <li><a href="#section4">quand elles soutiennent mon poids</a></li>
+    <li><a href="#section5">suivre leurs racines à travers le sol et ne plus en sortir</a></li>
     </ol>
     
-    <h2>toucher leurs écorces</h2>
-    <img src="./ressources/IMG_2546.JPEG" alt="" style="width: 25%">
+    <h2 id="section1">toucher leurs écorces</h2>
+    <img src="./ressources/IMG_2546.JPEG" alt="">
     <p>de toucher leurs écorces est pas mal. franchelent ça me soulage de le faire</p>
-    <h2>me faire bercer par le bruit du vent qui traverse les branches</h2>
-    <img src="./ressources/IMG_2973.jpeg" alt="" style="width: 25%;">
+    <h2 id="section2">me faire bercer par le bruit du vent qui traverse les branches</h2>
+    <img src="./ressources/IMG_2973.jpeg" alt="" >
     <p>il y a rien d'autre que le vent. c'est elle qui me crée, je suis une vague qui est destinée à s'écraser sur ton rocher. <strong>Ni moi ni toi ne le savons encore.</strong></p>
-    <h2>regarder le soleil danser à travers les feuilles</h2>
-    <img src="./ressources/IMG_3343.jpeg" alt="" style="width: 25%;">
+    <h2 id="section3">regarder le soleil danser à travers les feuilles</h2>
+    <img src="./ressources/IMG_3343.jpeg" alt="" >
     <p>apparament petit c'était ce que j'aimais faire le plus. Ma Mère poussait la pousette sous les arbres, elle me décrit mes grands yeux. Le regard qui se ferme pas, les feuilles qui m'impregnent. Ado j'ai parlé à mon ami qui est devenu mon crush de ça. aujourd'hui j'y ai aussi pensé. JE me sens vivre appartenir être en lien quand les feuilles dansent je disparais. </p>
-    <h2>quand elles soutiennent mon poids</h2>
-    <img src="/ressources/IMG_1664.JPEG" alt="" style="width: 25%;">
+    <h2 id="section4">quand elles soutiennent mon poids</h2>
+    <img src="/ressources/IMG_1664.JPEG" alt="" >
     <p>je ne peux plus me tenir debout. Le sol m'a pris et la gravité m'absorbe. parfois j'essaye de tenir mais le poids de mon exostence est trop pour les articulations en géleée. au soleil je fonds comme un solero, mon jus reste dans l'enveloppe qui est cette peau toute molle. Je fermente et gonfle au soleil. <strong>L'arbre me tient quand je ne tiens plus.</strong></p>
-    <h2>suivre leurs racines à travers le sol et ne plus en sortir</h2>
-    <img src="/ressources/IMG_2408.JPEG" alt="" style="width: 25%;">
+    <h2 id="section5">suivre leurs racines à travers le sol et ne plus en sortir</h2>
+    <img src="/ressources/IMG_2408.JPEG" alt="" >
     <p>je veux vivre dans un trou sous la terre profondément pour ne plus rien entendre. Juste l'odeur du sol mouillé, les vers qui  grouillent sur moi. Je serai le voisin curieux des renards, des lapins. je me cacherai là jusqu'à la tombée de la nuit, je sortirai comme un chat, j'égorgerai les grosses poules de ton voisin.</p>
 
     <p style="color: darkslategray;">entre temps la nuit est tombée. on est à la fin et mes mains gracées. le bruit des chats qui courent dans l'herbe mouilée d'une journée terminée. des étoiles parfois et le bruit d'un avion, d'une voiture. elles parlent beaucoup pour rien dire.</p>
